fix bug, All Studies page, field selection was covered by header

--- a/Site/webapp/wdkCustomization/js/client/App/Header/Header.scss
+++ b/Site/webapp/wdkCustomization/js/client/App/Header/Header.scss
@@ -42,6 +42,6 @@
 
 .wdk-Answer .MesaComponent .DataTable .DataTable-Sticky .DataTable-Header {
   top: 40px;
-  z-index:1000;
+  z-index:1;
 }
 
